# simproto

./: Cargo.toml  DESIGN.md  LICENSE  README.md
benches/: bench.rs
framed/: Cargo.toml  README.md
framed/src/: framed.rs  framed_read.rs  framed_write.rs  lib.rs
framed/src/codec/: mod.rs
src/: lib.rs
src/dialog/: caller.rs  codec.rs  frame.rs  handler.rs  mod.rs
src/sim/: handler.rs  mod.rs  requestor.rs
src/sim/message/: mod.rs  request.rs  response.rs
src/util/: mod.rs  pair_io.rs
